# deep-CNN-classifier

./: .gitignore  LICENSE  README.md  dvc.yaml  example2.py  init_setup.sh  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
Prediction_service/: Dockerfile
configs/: config.yaml
research/: 1st.ipynb  2nd.ipynb  3rd.ipynb  4th.ipynb  5th.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: __init__.py  data_ingestion.py  prepare_callback.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_Prepare_base_model.py
src/deepClassifier/utils/: common.py
tests/unit/: test_utils.py
