[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.8    

[options.extras_require]
testing =
    pytest>=7.1.3 #TO run unit test and intigration test
    mypy>=0.971 #To check whether there is typing error
    flake8>=5.0.4 # To see the mistakes you done like leave extra space
    tox>=3.25.1 #To create diffrent working environment and to test your application locally
    black>=22.8.0 #To fomatting your application

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py